results/securify2/time_manipulation_ether_lotto.error.txt
WARNING: The requested image's platform (linux/amd64) does not match the detected host platform (linux/arm64/v8) and no specific platform was requested
Traceback (most recent call last):
  File "securify/__main__.py", line 286, in <module>
    main()
  File "securify/__main__.py", line 277, in main
    matches.extend(pattern.find_matches())
  File "/sec/securify/analyses/patterns/ast/default_constructor_pattern.py", line 17, in find_matches
    ast_root = self.get_ast_root()
  File "/sec/securify/analyses/patterns/ast/abstract_ast_pattern.py", line 18, in get_ast_root
    ast_root = self.analysis_context.ast
  File "/sec/securify/analyses/analysis.py", line 74, in ast
    self._ast = self.config.ast_compiler(self)
  File "securify/__main__.py", line 253, in <lambda>
    ast_compiler=lambda t: solidity_ast_compiler.compile_ast(t.source_file),
  File "/sec/securify/solidity/solidity_ast_compiler.py", line 31, in compile_ast
    compile_output = compile_standard(compile_input, allow_paths='/')
  File "/usr/local/lib/python3.7/dist-packages/py_solc-3.2.0-py3.7.egg/solc/main.py", line 181, in compile_standard
    message=error_message,
solc.exceptions.SolcError: fixed_pragma.sol:27:5: SyntaxError: Functions are not allowed to have the same name as the contract. If you intend this to be a constructor, use "constructor(...) { ... }" to define it.
    function EtherLotto() {
    ^ (Relevant source part starts here and spans across multiple lines).

fixed_pragma.sol:27:5: SyntaxError: No visibility specified. Did you intend to add "public"?
    function EtherLotto() {
    ^ (Relevant source part starts here and spans across multiple lines).

fixed_pragma.sol:33:5: SyntaxError: No visibility specified. Did you intend to add "public"?
    function play() payable {
    ^ (Relevant source part starts here and spans across multiple lines).

fixed_pragma.sol:43:27: TypeError: "sha3" has been deprecated in favour of "keccak256"
        var random = uint(sha3(block.timestamp)) % 2;
                          ^--^

fixed_pragma.sol:43:32: TypeError: Invalid type for argument in function call. Invalid implicit conversion from uint256 to bytes memory requested. This function requires a single bytes argument. Use abi.encodePacked(...) to obtain the pre-0.5.0 behaviour or abi.encode(...) to use ABI encoding.
        var random = uint(sha3(block.timestamp)) % 2;
                               ^-------------^

fixed_pragma.sol:43:9: SyntaxError: Use of the "var" keyword is disallowed. Use explicit declaration `uint256 random = ...´ instead.
        var random = uint(sha3(block.timestamp)) % 2;
        ^------------------------------------------^

fixed_pragma.sol:49:13: TypeError: "send" and "transfer" are only available for objects of type "address payable", not "address".
            bank.transfer(FEE_AMOUNT);
            ^-----------^

        > command: `solc --allow-paths / --standard-json`
        > return code: `0`
        > stderr:
        {"errors":[{"component":"general","formattedMessage":"fixed_pragma.sol:27:5: SyntaxError: Functions are not allowed to have the same name as the contract. If you intend this to be a constructor, use \"constructor(...) { ... }\" to define it.\n    function EtherLotto() {\n    ^ (Relevant source part starts here and spans across multiple lines).\n","message":"Functions are not allowed to have the same name as the contract. If you intend this to be a constructor, use \"constructor(...) { ... }\" to define it.","severity":"error","sourceLocation":{"end":797,"file":"fixed_pragma.sol","start":741},"type":"SyntaxError"},{"component":"general","formattedMessage":"fixed_pragma.sol:27:5: SyntaxError: No visibility specified. Did you intend to add \"public\"?\n    function EtherLotto() {\n    ^ (Relevant source part starts here and spans across multiple lines).\n","message":"No visibility specified. Did you intend to add \"public\"?","severity":"error","sourceLocation":{"end":797,"file":"fixed_pragma.sol","start":741},"type":"SyntaxError"},{"component":"general","formattedMessage":"fixed_pragma.sol:33:5: SyntaxError: No visibility specified. Did you intend to add \"public\"?\n    function play() payable {\n    ^ (Relevant source part starts here and spans across multiple lines).\n","message":"No visibility specified. Did you intend to add \"public\"?","severity":"error","sourceLocation":{"end":1679,"file":"fixed_pragma.sol","start":936},"type":"SyntaxError"},{"component":"general","formattedMessage":"fixed_pragma.sol:27:5: Warning: This declaration shadows an existing declaration.\n    function EtherLotto() {\n    ^ (Relevant source part starts here and spans across multiple lines).\nfixed_pragma.sol:12:1: The shadowed declaration is here:\ncontract EtherLotto {\n^ (Relevant source part starts here and spans across multiple lines).\n","message":"This declaration shadows an existing declaration.","secondarySourceLocations":[{"end":1682,"file":"fixed_pragma.sol","message":"The shadowed declaration is here:","start":306}],"severity":"warning","sourceLocation":{"end":797,"file":"fixed_pragma.sol","start":741},"type":"Warning"},{"component":"general","formattedMessage":"fixed_pragma.sol:43:27: TypeError: \"sha3\" has been deprecated in favour of \"keccak256\"\n        var random = uint(sha3(block.timestamp)) % 2;\n                          ^--^\n","message":"\"sha3\" has been deprecated in favour of \"keccak256\"","severity":"error","sourceLocation":{"end":1324,"file":"fixed_pragma.sol","start":1320},"type":"TypeError"},{"component":"general","formattedMessage":"fixed_pragma.sol:43:32: TypeError: Invalid type for argument in function call. Invalid implicit conversion from uint256 to bytes memory requested. This function requires a single bytes argument. Use abi.encodePacked(...) to obtain the pre-0.5.0 behaviour or abi.encode(...) to use ABI encoding.\n        var random = uint(sha3(block.timestamp)) % 2;\n                               ^-------------^\n","message":"Invalid type for argument in function call. Invalid implicit conversion from uint256 to bytes memory requested. This function requires a single bytes argument. Use abi.encodePacked(...) to obtain the pre-0.5.0 behaviour or abi.encode(...) to use ABI encoding.","severity":"error","sourceLocation":{"end":1340,"file":"fixed_pragma.sol","start":1325},"type":"TypeError"},{"component":"general","formattedMessage":"fixed_pragma.sol:43:9: SyntaxError: Use of the \"var\" keyword is disallowed. Use explicit declaration `uint256 random = ...\u00b4 instead.\n        var random = uint(sha3(block.timestamp)) % 2;\n        ^------------------------------------------^\n","message":"Use of the \"var\" keyword is disallowed. Use explicit declaration `uint256 random = ...\u00b4 instead.","severity":"error","sourceLocation":{"end":1346,"file":"fixed_pragma.sol","start":1302},"type":"SyntaxError"},{"component":"general","formattedMessage":"fixed_pragma.sol:49:13: TypeError: \"send\" and \"transfer\" are only available for objects of type \"address payable\", not \"address\".\n            bank.transfer(FEE_AMOUNT);\n            ^-----------^\n","message":"\"send\" and \"transfer\" are only available for objects of type \"address payable\", not \"address\".","severity":"error","sourceLocation":{"end":1505,"file":"fixed_pragma.sol","start":1492},"type":"TypeError"}],"sources":{}}

        > stdout:
